also don't generate BuildConfig for debug

--- a/ntpclock/build.gradle
+++ b/ntpclock/build.gradle
@@ -30,6 +30,7 @@ android {
 
 afterEvaluate {
     generateReleaseBuildConfig.enabled = false
+    generateDebugBuildConfig.enabled = false
 }
 
 dependencies {
