--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':ntpclock', ':ntpclock-time', ':ntpclock-date', ':ntpclock-calendar', ':app'
+include ':ntpclock', ':ntpclock-time', ':ntpclock-threetenbp', ':ntpclock-joda', ':ntpclock-date', ':ntpclock-calendar', ':app'
