--- a/ntpclock-joda/build.gradle
+++ b/ntpclock-joda/build.gradle
@@ -28,7 +28,8 @@ afterEvaluate {
 }
 
 dependencies {
-    api project(":ntpclock")
+    api project(':ntpclock')
+    api 'joda-time:joda-time:2.10.3'
 
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'junit:junit:4.12'
