--- a/ntpclock-time/build.gradle
+++ b/ntpclock-time/build.gradle
@@ -28,9 +28,7 @@ afterEvaluate {
 }
 
 dependencies {
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation 'androidx.annotation:annotation:1.1.0'
-    implementation project(":ntpclock")
+    api project(":ntpclock")
 
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'junit:junit:4.12'
